--- a/app/src/main/res/layout/item_aditivo.xml
+++ b/app/src/main/res/layout/item_aditivo.xml
@@ -15,6 +15,7 @@
 
         <TextView
             android:id="@+id/tvNumero"
+            android:color="?attr/cardTextColor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
