--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_text_light">#aeaeae</color>
+    <color name="card_text_dark">#f2f2f2</color>
+    <color name="text_light">#505050</color>
+    <color name="text_dark">#aeaeae</color>
+    <color name="card_background_light">#f2f2f2</color>
+    <color name="card_background_dark">#272727</color>
 </resources>
